# template based on react_devtools and rn_welcome BUILD.gn

# Copyright (c) Meta Platforms, Inc. and affiliates.
# Copyright 2024 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("../../../scripts/build/ninja/devtools_entrypoint.gni")
import("../../../scripts/build/ninja/devtools_module.gni")
import("../../../scripts/build/ninja/generate_css.gni")
import("../visibility.gni")


devtools_module("test") {
  sources = [ 
    "TestDevToolView.ts", 
    #"TestDevToolModel.ts" 
  ]

  # add necessary deps here (ONLY what you use)
  deps = [
    "../../core/i18n:bundle",
    "../../core/sdk:bundle",
    "../../models/bindings:bundle",
    "../../models/logs:bundle",
    "../../models/react_native:bundle",
    "../../third_party/react-devtools:bundle",
    "../../ui/legacy:bundle",
  ]
}

devtools_entrypoint("bundle") {
  entrypoint = "test_devtool.ts"

  deps = [
    ":test",
  ]

  visibility = [
    ":*",
    "../../entrypoints/*",
  ]

  visibility += devtools_panels_visibility
}

devtools_entrypoint("meta") {
  entrypoint = "test_devtool-meta.ts"

  deps = [ ":bundle" ]

  visibility = [ "../../entrypoints/*" ]
}